# cortana

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  run.py
src/core/: backup.py  cortana.py  init.py  tools.py
src/func/: commands.py  functions.py
